--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;">
 
         <a-nft type="nft"
-            url="https://preview.redd.it/bumble-bee-build-v0-4zywkwb3f3wa1.png?width=1080&crop=smart&auto=webp&s=667d9bbb2e2024d1f9d57b0fe4ec0ac32b999976"
+            url="https://drive.usercontent.google.com/download?id=1DpsWtvjGpm_NynhhW1qMh2IecbnmjDYp&export=download&authuser=0&confirm=t&uuid=5950b2b0-ec13-4299-bb87-918fa6cb27f5&at=AN8xHoq6HAz0U3CEgLAzdM-jease:1758798713079"
             smooth="true" smoothCount="10" smoothTolerance=".01" smoothThreshold="5">
             <a-entity
-                gltf-model="https://drive.google.com/file/d/17QK8yxHrSj4thfSzOb_v9xKdmznohMYf/view?usp=sharing"
+                gltf-model="https://drive.usercontent.google.com/download?id=17QK8yxHrSj4thfSzOb_v9xKdmznohMYf&export=download&authuser=0&confirm=t&uuid=d90b5efa-4d70-4615-ba00-675f22c3d088&at=AN8xHopRf5JBO9sTHYkN2iLl7scA:1758798552487"
                 scale="5 5 5" position="50 150 0">
             </a-entity>
         </a-nft>
