--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             url="https://drive.usercontent.google.com/download?id=1DpsWtvjGpm_NynhhW1qMh2IecbnmjDYp&export=download&authuser=0&confirm=t&uuid=5950b2b0-ec13-4299-bb87-918fa6cb27f5&at=AN8xHoq6HAz0U3CEgLAzdM-jease:1758798713079"
             smooth="true" smoothCount="10" smoothTolerance=".01" smoothThreshold="5">
             <a-entity
-                glb-model="https://drive.usercontent.google.com/download?id=17QK8yxHrSj4thfSzOb_v9xKdmznohMYf&export=download&authuser=0&confirm=t&uuid=d90b5efa-4d70-4615-ba00-675f22c3d088&at=AN8xHopRf5JBO9sTHYkN2iLl7scA:1758798552487"
+                gltf-model="https://drive.usercontent.google.com/download?id=1kAtdTTvVArwBGN-KetiYgmokef3_htuX&export=download&authuser=0&confirm=t&uuid=876dd5de-72b9-404b-bc81-202ee583798d&at=AN8xHoo4UgssapBfj7PNi3gmz4bS:1758800327040"
                 scale="5 5 5" position="50 150 0">
             </a-entity>
         </a-nft>
