--- a/index.html
+++ b/index.html
@@ -1,6 +1,28 @@
-<script
-    src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js"></script>
-<script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/aframe@1.6.0/dist/aframe-master.min.js"></script>
+
+<!--<script src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js'></script>-->
+<script src='../../../../aframe/build/aframe-ar-nft.js'></script>
+
+<script>
+    window.onload = function() {
+        AFRAME.registerComponent('videohandler', {
+            init: function () {
+                var marker = this.el;
+
+                this.vid = document.querySelector("#vid");
+
+                marker.addEventListener('markerFound', function () {
+                    this.vid.play();
+                }.bind(this));
+
+		marker.addEventListener('markerLost', function() {
+			this.vid.pause();
+			this.vid.currentTime = 0;
+		}.bind(this));
+            }
+        });
+    };
+</script>
 
 <style>
     .arjs-loader {
@@ -23,23 +45,48 @@
     }
 </style>
 
-<body style="margin : 0px; overflow: hidden;">
-    <!-- minimal loader shown until image descriptors are loaded -->
+<body style='margin : 0px; overflow: hidden;'>
     <div class="arjs-loader">
         <div>Loading, please wait...</div>
     </div>
+    <a-scene
+        vr-mode-ui="enabled: false;"
+        renderer='antialias: true; alpha: true; precision: medium;'
+        embedded 
+            arjs='trackingMethod: best; sourceType: webcam; debugUIEnabled: false;'>
 
-    <a-scene vr-mode-ui="enabled: false;" renderer="logarithmicDepthBuffer: true;" embedded
-        arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;">
+        <a-assets>
+            <video src="mov_bbb.mp4"
+                preload="auto" 
+                id="vid" 
+                response-type="arraybuffer" 
+                loop
+                crossorigin 
+                webkit-playsinline 
+                autoplay 
+                muted 
+                playsinline>
+            </video>
+        </a-assets>
 
-        <a-nft type="nft"
-            url="https://drive.usercontent.google.com/download?id=1DpsWtvjGpm_NynhhW1qMh2IecbnmjDYp&export=download&authuser=0&confirm=t&uuid=5950b2b0-ec13-4299-bb87-918fa6cb27f5&at=AN8xHoq6HAz0U3CEgLAzdM-jease:1758798713079"
-            smooth="true" smoothCount="10" smoothTolerance=".01" smoothThreshold="5">
-            <a-entity
-                gltf-model="https://drive.usercontent.google.com/download?id=1kAtdTTvVArwBGN-KetiYgmokef3_htuX&export=download&authuser=0&confirm=t&uuid=876dd5de-72b9-404b-bc81-202ee583798d&at=AN8xHoo4UgssapBfj7PNi3gmz4bS:1758800327040"
-                scale="5 5 5" position="50 150 0">
-            </a-entity>
+        <a-nft
+            videohandler
+            type='nft' 
+            url='../../data/dataNFT/pinball'
+            smooth="true" 
+            smoothCount="10" 
+            smoothTolerance="0.01" 
+            smoothThreshold="5"
+        >
+            <a-video
+                src="#vid"
+                position='50 150 -100'
+                rotation='-90 0 0'
+                width='300'
+                height='175'
+                >
+            </a-video>
         </a-nft>
-        <a-entity camera></a-entity>
-    </a-scene>
+		<a-entity camera></a-entity>
+	</a-scene>
 </body>
