--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             arjs='trackingMethod: best; sourceType: webcam; debugUIEnabled: false;'>
 
         <a-assets>
-            <video src="mov_bbb.mp4"
+            <video src="/assets/mov_bbb.mp4"
                 preload="auto" 
                 id="vid" 
                 response-type="arraybuffer" 
@@ -72,11 +72,11 @@
         <a-nft
             videohandler
             type='nft' 
-            url='../../data/dataNFT/pinball'
+            url='/imgs/Capturar.iset'
             smooth="true" 
-            smoothCount="10" 
-            smoothTolerance="0.01" 
-            smoothThreshold="5"
+            smoothcount="10" 
+            smoothtolerance="0.01" 
+            smooththreshold="5"
         >
             <a-video
                 src="#vid"
