teste sem extensão

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <a-nft
             videohandler
             type='nft' 
-            url='/imgs/Capturar.iset'
+            url='/imgs/Capturar'
             smooth="true" 
             smoothcount="10" 
             smoothtolerance="0.01" 
