--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <script src="https://cdn.jsdelivr.net/npm/aframe@1.6.0/dist/aframe-master.min.js"></script>
 
 <!--<script src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js'></script>-->
-<script src='../../../../aframe/build/aframe-ar-nft.js'></script>
+<script src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js'></script>
 
 <script>
     window.onload = function() {
@@ -56,7 +56,7 @@
             arjs='trackingMethod: best; sourceType: webcam; debugUIEnabled: false;'>
 
         <a-assets>
-            <video src="/assets/mov_bbb.mp4"
+            <video src="https://raw.githubusercontent.com/maLu70/PRITest/refs/heads/main/assets/mov_bbb.mp4"
                 preload="auto" 
                 id="vid" 
                 response-type="arraybuffer" 
