--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 <body style='margin : 0px; overflow: hidden;'>
     <div class="arjs-loader">
-        <div>Loading, please wait...</div>
+        <div>Carregando</div>
     </div>
     <a-scene
         vr-mode-ui="enabled: false;"
@@ -72,7 +72,7 @@
         <a-nft
             videohandler
             type='nft' 
-            url='/imgs/Capturar'
+            url='https://raw.githubusercontent.com/maLu70/PRITest/img/Capturar'
             smooth="true" 
             smoothcount="10" 
             smoothtolerance="0.01" 
