--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
+<title>Teste PRI</title>
+
 <script src="https://cdn.jsdelivr.net/npm/aframe@1.6.0/dist/aframe-master.min.js"></script>
 
-<!--<script src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js'></script>-->
+
 <script src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js'></script>
 
 <script>
@@ -53,22 +55,14 @@
     <a-scene vr-mode-ui="enabled: false;" renderer='antialias: true; alpha: true; precision: medium;' embedded
         arjs='trackingMethod: best; sourceType: webcam; debugUIEnabled: false;'>
 
-        <a-assets>
-            <video src="https://raw.githubusercontent.com/maLu70/PRITest/refs/heads/main/assets/model.gltf"
-                preload="auto" id="vid" response-type="arraybuffer" loop crossorigin webkit-playsinline autoplay muted
-                playsinline>
-            </video>
-        </a-assets>
-
         <a-nft videohandler type='nft'
             url='https://raw.githubusercontent.com/maLu70/PRITest/refs/heads/main/imgs/Capturar' smooth="true"
             smoothcount="10" smoothtolerance="0.01" smooththreshold="5">
-            <a-entity
-            gltf-model="#vid"
-            scale="0.5 0.5 0.5"
-            position="0 0 0"
-            rotation="1 1 1">
-            </a-entity>
+             <a-entity
+          position="0 0 0"
+          scale="0.05 0.05 0.05"
+          gltf-model="https://raw.githubusercontent.com/maLu70/PRITest/refs/heads/main/assets/model.gltf"
+        ></a-entity>
         </a-nft>
         <a-entity camera></a-entity>
     </a-scene>
