--- a/Teste3d.html
+++ b/Teste3d.html
@@ -23,7 +23,7 @@
 </style>
 
 <body style="margin : 0px; overflow: hidden;">
-  <!-- minimal loader shown until image descriptors are loaded -->
+
   <div class="arjs-loader">
     <div>Loading, please wait...</div>
   </div>
@@ -43,6 +43,19 @@
     >
       <a-entity
         gltf-model="https://raw.githubusercontent.com/maLu70/PRITest/refs/heads/main/assets/model.gltf"
+        scale="250 250 250"
+        position="0 0 0"
+      >
+       <a-nft
+      type="nft"
+      url="https://raw.githubusercontent.com/maLu70/PRITest/refs/heads/main/imgs/llama"
+      smooth="true"
+      smoothCount="10"
+      smoothTolerance=".01"
+      smoothThreshold="5"
+    >
+      <a-entity
+        gltf-model="https://raw.githubusercontent.com/maLu70/PRITest/refs/heads/main/asset/scene.gltf"
         scale="250 250 250"
         position="0 0 0"
       >
