teste llama final

--- a/Teste3d.html
+++ b/Teste3d.html
@@ -43,7 +43,7 @@
     >
       <a-entity
         gltf-model="https://raw.githubusercontent.com/maLu70/PRITest/refs/heads/main/assets/model.gltf"
-        scale="100 100 100"
+        scale="250 250 250"
         position="0 0 0"
       >
        <a-nft
@@ -55,7 +55,7 @@
       smoothThreshold="5"
     >
       <a-entity
-        gltf-model="https://raw.githubusercontent.com/maLu70/PRITest/refs/heads/main/asset/scene.gltf"
+        gltf-model="https://github.com/maLu70/PRITest/raw/refs/heads/main/assets/scene.gltf"
         scale="250 250 250"
         position="0 0 0"
       >
