--- a/Teste3d.html
+++ b/Teste3d.html
@@ -46,7 +46,10 @@
         scale="250 250 250"
         position="0 0 0"
       >
+
+
        <a-nft
+       id=""
       type="nft"
       url="https://raw.githubusercontent.com/maLu70/PRITest/refs/heads/main/imgs/llama"
       smooth="true"
@@ -55,7 +58,7 @@
       smoothThreshold="5"
     >
       <a-entity
-        gltf-model="https://github.com/maLu70/PRITest/raw/refs/heads/main/assets/scene.gltf"
+        gltf-model="https://raw.githubusercontent.com/maLu70/PRITest/refs/heads/main/assets/scene.gltf"
         scale="250 250 250"
         position="0 0 0"
       >
